# genie-datastores

./: .gitignore  README.md  alembic.ini  pyproject.toml
genie_datastores/: __init__.py
genie_datastores/contract/: __init__.py
genie_datastores/google/: google_consts.py  google_utils.py
genie_datastores/google/drive/: __init__.py  google_drive_client.py
genie_datastores/google/drive/models/: __init__.py  google_drive_download_metadata.py
genie_datastores/google/google_drive/: google_drive_client.py
genie_datastores/google/google_drive/models/: google_drive_upload_metadata.py
genie_datastores/google/google_sheets/: __init__.py  google_sheets_client.py
genie_datastores/google/google_sheets/models/: __init__.py  share_settings.py
genie_datastores/google/sheets/: __init__.py  google_sheets_client.py  google_sheets_uploader.py
genie_datastores/google/sheets/models/: __init__.py  permission_type.py  role.py  share_settings.py  sheet.py
genie_datastores/google_drive/: google_consts.py  google_drive_client.py  google_drive_consts.py
genie_datastores/google_drive/models/: google_drive_upload_metadata.py
genie_datastores/milvus/: __init__.py  consts.py  milvus_client.py  operations.py  utils.py
genie_datastores/milvus/collections/: __init__.py  track_names_embeddings_collection.py
genie_datastores/milvus/group_clients/: __init__.py  milvus_collections_client.py  milvus_vectors_client.py
genie_datastores/milvus/models/: __init__.py  collection_config.py  create_request.py  index_params.py  query_request.py  search_params.py  search_request.py
genie_datastores/models/: __init__.py  data_source.py
genie_datastores/mongo/: mongo_client.py  operations.py
genie_datastores/mongo/models/: __init__.py  about_document.py  about_paragraph_document.py  base_document.py  lyrics_section_document.py  lyrics_section_type.py
genie_datastores/postgres/: __init__.py  operations.py  postgres_operations.py  postgres_utils.py  utils.py
genie_datastores/postgres/alembic/: env.py  run_migration.py
genie_datastores/postgres/alembic/versions/: 0572d1a39022_add_artist_about_column.py  0650feea2b8d_billboard_unique_constraints.py  06bb4679e295_add_genius_artist_id_column.py  0a5baddd852f_add_birth_israeli_source_columns.py  0aaea7e78166_artists_table.py  0ab1b827499b_remove_spotify_artists_columns.py  0c58b4601324_make_shazam_artists_has_about_document_.py  0dd9e0d9596f_make_has_about_document_not_nullable.py  0f8daceba5e6_embeddings_non_null_constraint.py  132a498067f4_add_playlist_id_column.py  14066991e400_remove_legacy_billboard_tables.py  198984bd0e84_billboard_orms.py  1c4ab9f09748_audio_features_integer.py  1eb199cddfb9_initial.py  2183515c6cc5_allow_null_chart_entry_track_id.py  24a53a46ddea_shazam_orms.py  28cd76c4a0b1_add_translations_id_serial_columns.py  2a42b3f17e1a_make_chart_key_column_nullable.py  2e483713d2a5_tempo_column_small_integer.py  3b78b55159b1_has_name_embeddings.py  3ed1eea36432_add_key_chart_date_constraint.py  3f407bc136c9_add_batch_id_column.py  4a3c69517f0c_round_tempo.py  4d49d0e91690_add_entry_metadata_column.py  5b23c3100284_remove_israeli_source_column.py  676d91e955eb_artists_table_shazam_ids.py  6c51f240146d_add_genius_artists_table.py  77c7d92a749f_add_translations_orm.py  7872808c91bc_fill_shazam_artists_has_about_document_.py  7ac1e91e1f3a_add_evidence_and_origin_columns.py  82a5e756e3be_translations_id_primary_key.py  88875ef86735_fill_embeddings_null_values.py  88c5d940ef41_add_genres_table.py  8935d4b04386_add_charts_table.py  8c68058d20da_spotify_images_datasource.py  (+28 more)
genie_datastores/postgres/consts/: datetime_consts.py  orm_consts.py  shazam_consts.py  spotify_consts.py
genie_datastores/postgres/contract/: __init__.py  postgres_database_inserter_interface.py
genie_datastores/postgres/inner_utils/: spotify_utils.py
genie_datastores/postgres/models/: __init__.py
genie_datastores/postgres/testing/: __init__.py  postgres_mock_factory.py
genie_datastores/postgres/tools/: __init__.py  shazam_writers_extractor.py
genie_datastores/postgres/utils/: datetime_utils.py  dict_utils.py  spotify_utils.py
genie_datastores/redis/: __init__.py  operations.py  redis_client.py
genie_datastores/testing/milvus/: __init__.py  milvus_testkit.py
genie_datastores/testing/mongo/: __init__.py  mongo_testkit.py
genie_datastores/testing/postgres/: __init__.py  postgres_mock_factory.py  postgres_testkit.py  testing_utils.py
genie_datastores/testing/redis/: __init__.py  redis_testkit.py
(+38 files in other folders)
