[tool.poetry]
name = "genie-datastores"
version = "0.1.2"
description = ""
authors = ["nirgodin <70273595+nirgodin@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
genie-common = { git = "https://github.com/nirgodin/genie-common.git", rev = "a4ede0c5", extras = ["all"] }
sqlalchemy = { version = "<2.0.0", extras = ["postgres"] }
asyncmy = { version = "0.2.8", extras = ["postgres"] }
asyncpg = { version = "0.28.0", extras = ["postgres"] }
greenlet = { version = "2.0.1", extras = ["postgres"] }
billboard-py = { version = "^7.0.0", extras = ["postgres"] }
dataclasses-json = { version = ">=0.6,<1.0", extras = ["milvus"] }
aioredis = { version = ">=2.0.0,<2.1.0", extras = ["redis"] }
google-api-python-client = { version = ">=2.8,<3.0", extras = ["google_drive"] }

[tool.poetry.group.dev.dependencies]
alembic = "^1.12.1"
nest-asyncio = "^1.5.8"

[tool.poetry.extras]
google_drive = ["google_drive"]
milvus = ["milvus"]
postgres = ["postgres"]
redis = ["redis"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
