[tool.poetry]
name = "genie-datastores"
version = "0.1.2"
description = ""
authors = ["nirgodin <70273595+nirgodin@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
genie-common = { git = "https://github.com/nirgodin/genie-common.git", rev = "3d5a61e3" }
sqlalchemy = { version = "<2.0.0", optional = true }
asyncmy = { version = "0.2.8", optional = true }
asyncpg = { version = "0.28.0", optional = true }
greenlet = { version = "2.0.1", optional = true }
billboard-py = { version = "^7.0.0", optional = true }
dataclasses-json = { version = ">=0.6,<1.0", optional = true }
aioredis = { version = ">=2.0.0,<2.1.0", optional = true }
google-api-python-client = { version = ">=2.8,<3.0", optional = true }
gspread = { version = ">=5.12.4,<5.13", optional = true}
pandas = { version = "<2.2", optional = true}

[tool.poetry.group.dev.dependencies]
alembic = "^1.12.1"
nest-asyncio = "^1.5.8"

[tool.poetry.extras]
google_drive = ["google-api-python-client"]
google_sheets = ["gspread", "pandas"]
milvus = ["dataclasses-json"]
postgres = ["billboard-py", "greenlet", "asyncpg", "asyncmy", "sqlalchemy", "pandas"]
redis = ["aioredis"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
