[tool.poetry]
name = "genie-datastores"
version = "0.1.2"
description = ""
authors = ["nirgodin <70273595+nirgodin@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
genie-common = { git = "https://github.com/nirgodin/genie-common.git", rev = "5ac18fe5728cc44a237b92ead8710e4b85739ff8", extras = ["clients"] }  # Must use long hash because poetry export runs into problem without
sqlalchemy = { version = "<2.0.0", optional = true }
asyncmy = { version = "0.2.8", optional = true }
asyncpg = { version = "0.28.0", optional = true }
greenlet = { version = "*", optional = true }
billboard-py = { version = "^7.0.0", optional = true }
dataclasses-json = { version = ">=0.6,<1.0", optional = true }
redis = { version = ">=5.0.3,<5.1", optional = true }
google-api-python-client = { version = ">=2.8,<3.0", optional = true }
gspread = { version = ">=5.12.4,<5.13", optional = true }
pandas = { version = "<2.2", optional = true }
testcontainers = { version = ">=3.7.1,<4.0", optional = true }
testcontainers-postgres = { version = "0.0.1rc1", optional = true }
testcontainers-mongodb = { version = "0.0.1rc1", optional = true }
beanie = { version = ">=1.26.0,<1.27", optional = true }
pymilvus = { version = ">=2.4.0,<2.5", optional = true }

[tool.poetry.group.dev.dependencies]
alembic = "^1.12.1"
nest-asyncio = "^1.5.8"

[tool.poetry.extras]
google_drive = ["google-api-python-client"]
google_sheets = ["gspread", "pandas"]
milvus = ["dataclasses-json"]
postgres = ["billboard-py", "greenlet", "asyncpg", "asyncmy", "sqlalchemy", "pandas"]
redis = ["redis"]
mongo = ["beanie"]
postgres-testing = ["testcontainers", "testcontainers-postgres", "sqlalchemy", "asyncmy", "asyncpg", "greenlet"]
mongo-testing = ["testcontainers", "testcontainers-mongodb", "beanie"]
redis-testing = ["testcontainers", "testcontainers-redis", "redis"]
milvus-testing = ["pymilvus"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
